ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: app.localhost
    http:
      paths:
      - path: /ui/
        pathType: Prefix
        backend:
          service:
            name: skill-matrix-ui
            port:
              number: 8080
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: skill-matrix-api
            port:
              number: 8000
      - path: /admin/
        pathType: Prefix
        backend:
          service:
            name: skill-matrix-api
            port:
              number: 8000
